# pdfstract

./: .dockerignore  .gitignore  CLI_README.md  Dockerfile.backend  MANIFEST.in  README.md  cli.py  docker-compose.yml  main.py  makefile  nginx.conf  pyproject.toml
.project_doc_record/: meta-info.json  project_hierarchy.json
docs/: docusaurus.config.ts  sidebars.ts
docs/architecture/: 01-system-context-components.mmd  02-converter-layer-classes.mmd  03-chunker-layer-classes.mmd  04-embedding-layer-classes.mmd  05-factory-pattern-architecture.mmd  06-data-flow.mmd  07-interaction-sequence.mmd  README.md
docs/docs/: installation.md  intro.md  quick-start.md
docs/docs/api/: overview.md
docs/docs/cli/: overview.md
docs/docs/features/: chunk.md  embed.md  extract.md
docs/docs/web-ui/: overview.md
docs/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/static/: cli-animation.html
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CompareModal.jsx  ComparisonResults.jsx  EmbeddingsPanel.jsx  RecentComparisons.jsx
pdfstract/: __init__.py  api.py
scripts/: examples_library_usage.py  mineru-setup.py
services/: __init__.py  chunker_factory.py  cli_factory.py  db_methods_snippet.py  db_service.py  embeddings_factory.py  ocrfactory.py
services/converters/: mineru_converter.py
services/embeddings_wrappers/: azure_openai_wrapper.py  base.py  google_wrapper.py  model2vec_wrapper.py  ollama_wrapper.py  openai_wrapper.py  sentence_transformers_wrapper.py
templates/: index.html
tests/: test_api_pdfstract.py  test_cli_chunking.py  test_cli_embeddings.py  test_embeddings_wrappers.py
