[build-system]
requires = ["setuptools>=70", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfstract"
version = "1.1.1"
description = "PDFStract - The Extraction and Chunking Layer in Your RAG Pipeline - Available as CLI - WEBUI - API"
readme = "CLI_README.md"
requires-python = ">=3.11, <=3.13.3"
license = {text = "MIT"}
authors = [
    {name = "PDFStract Team"}
]
keywords = ["pdf", "extraction", "rag", "chunking", "llm", "ai", "document"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]

# BASE - Fast extractors (pymupdf4llm, markitdown), no ML models
dependencies = [
    # Core framework
    "aiofiles>=24.1.0",
    "click>=8.1.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "rich>=13.0.0",
    "uvicorn[standard]>=0.35.0",
    "loguru>=0.7.2",
    "python-magic>=0.4.27",
    "tomli>=2.0.0; python_version < '3.11'",
    # ===== BASE LIBRARIES =====
    # pymupdf4llm, markitdown
    "pymupdf4llm>=0.0.26",
    "markitdown[pdf]>=0.1.2",
    # Internal dependencies (not shown to user)
    "pillow>=10.4.0",
    "pypdf2>=3.0.1",
    "chonkie[all]>=1.0.0",
]

[project.optional-dependencies]
# STANDARD - Adds pytesseract, unstructured
standard = [
    # ===== STANDARD LIBRARIES =====
    # pytesseract, unstructured
    "pytesseract>=0.3.10",
    "unstructured[pdf]>=0.15.0",
    # Internal dependencies
    "pdf2image>=1.17.0",
]

# ADVANCED - Adds marker, docling, paddleocr, deepseek (ML-powered, best quality)
advanced = [
    # ===== ADVANCED LIBRARIES =====
    # marker, docling, paddleocr, deepseek
    "marker-pdf>=1.8.1",
    "docling>=2.12.0",
    "paddleocr[all]>=3.3.2",
    "paddlepaddle>=3.2.2; platform_machine != 'aarch64'",
    # DeepSeek-OCR dependencies
    "transformers>=4.51.1",
    "torch>=2.0.0",
    "addict>=2.4.0",
    "matplotlib>=3.10.7",
    "easydict>=1.13",
]

# ALL - Everything: all libraries + chunking
all = [
    "pdfstract[standard]",
    "pdfstract[advanced]",
]

[project.scripts]
pdfstract = "cli:main"

[project.urls]
Homepage = "https://github.com/aksarav/pdfstract"
Documentation = "https://aksarav.github.io/pdfstract"
Repository = "https://github.com/aksarav/pdfstract"
Issues = "https://github.com/aksarav/pdfstract/issues"

[tool.setuptools]
py-modules = ["cli", "batch_scheduler"]
packages = ["pdfstract", "services", "services.converters", "services.chunkers"]
include-package-data = true
